# SpherizedURDFGenerator

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  Sphereized.cpp  check_json.py  check_json2.py  main.cpp  readme.md
.devcontainer/: README.md  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
app/: CMakeLists.txt  Capsuleized.cpp  Convex.cpp  Sphereized.cpp
assets/fr3_compare_bundle/: fr3_capsule_default.json  fr3_capsule_default.urdf  fr3_capsule_high_detail.json  fr3_capsule_high_detail.urdf  fr3_capsule_single.json  fr3_capsule_single.urdf  fr3_convex.urdf  fr3_sphere_default.json  fr3_sphere_default.urdf  fr3_sphere_single.json  fr3_sphere_single.urdf
bot_common/include/alg_factory/: algorithm_factory.h  bind_this.h
bot_common/include/log/: log.h
bot_common/include/state/: error_code.h
bot_utils/: CMakeLists.txt
bot_utils/sphereTreeWrapper/: CMakeLists.txt
bot_utils/sphereTreeWrapper/include/sphereTreeWrapper/: sphereTreeBase.h  sphereTreeGrid.h  sphereTreeHubbard.h  sphereTreeMedial.h  sphereTreeOctree.h  sphereTreeSpawn.h
bot_utils/sphereTreeWrapper/src/: sphereTreeBase.cpp  sphereTreeGrid.cpp  sphereTreeHubbard.cpp  sphereTreeMedial.cpp  sphereTreeOctree.cpp  sphereTreeSpawn.cpp
build_dkr/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  SpherizedURDFGeneratorConfig.cmake  SpherizedURDFGeneratorConfig.cmake.in  SpherizedURDFGeneratorTargets.cmake  cmake_install.cmake  cmake_uninstall.cmake  compile_commands.json  usage
build_dkr/app/: Makefile  cmake_install.cmake  convex  spherized
build_dkr/bot_utils/: Makefile  cmake_install.cmake
build_dkr/bot_utils/sphereTreeWrapper/: Makefile  libsphereTreeWrapper.so.1  libsphereTreeWrapper.so.1.4
cmake/: Doxygen.cmake  PackageProject.cmake  PythonSetup.cmake  Utilities.cmake
config/capsule/: capsuleConfig.yml  capsuleConfig_tight.yml  default.yml  high_detail.yml  single.yml
config/convex/: default.yml
config/sphereTree/: default.yml  single.yml  sphereTreeConfig.yml
doc/handoffs/: 2026-07-02-capsule-geometry-handoff.md
doc/paper/: .gitignore  main.tex  outline.md  ref.bib  state.md
doc/paper/artifacts/citation-survey/: RESULT.md
doc/paper/artifacts/claim-consistency-audit/: RESULT.md
doc/paper/artifacts/distance-query-benchmark/: RESULT.md
doc/paper/artifacts/distance-query-benchmark/data/: distance_query_timing.csv  mesh_timing.csv
doc/paper/artifacts/distance-query-benchmark/scripts/: bench_mesh_link.py  benchmark_distance_queries.py  benchmark_mesh_only.py  (+2 more)
doc/paper/artifacts/exp-capsule-ablation/: RESULT.md
doc/paper/artifacts/exp-fr3-mode-comparison/: RESULT.md
doc/paper/artifacts/fig-capsule-method-schematic/: RESULT.md  generate_figure.py
doc/paper/artifacts/fig-qualitative-overlay/: RESULT.md  render_overlay_grid.py
doc/paper/artifacts/related-work-positioning-audit/: RESULT.md
doc/paper/artifacts/surface-coverage-metrics/: RESULT.md  eval_surface_coverage.py
doc/paper/artifacts/synthetic-morphology-benchmark/: RESULT.md
doc/paper/figures/: README.md
doc/paper/prompt/: implement.md  loop.md  reviewer.md  writer.md
doc/paper/requests/: citation-survey.md  claim-consistency-audit.md  distance-query-benchmark.md  exp-capsule-ablation.md  exp-fr3-mode-comparison.md  fig-capsule-method-schematic.md  fig-qualitative-overlay.md  related-work-positioning-audit.md  surface-coverage-metrics.md  synthetic-morphology-benchmark.md
doc/paper/reviews/: final_verification_2026-07-06.md  gatekeeper_review_2026-07-06.md  review_iter_1.md  review_iter_10.md  review_iter_2.md  review_iter_3.md  review_iter_4.md  review_iter_5.md  review_iter_6.md  review_iter_7.md  review_iter_8.md  review_iter_9.md
doc/paper/sections/: abstract.tex  conclusion.tex  discussion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex  system_overview.tex  validation_metrics.tex
doc/paper/tables/: README.md
docker/: .dockerignore  Dockerfile
docs/: config-presets.md  developer-guide.md  modes.md  output-schema.md  parameter-tuning.md  python-api.md  quickstart.md  visualization.md
docs/superpowers/plans/: 2026-07-02-capsule-tightness-contract-fix.md  2026-07-02-capsule-tightness-improvement.md  2026-07-02-capsule-tightness-objective-fixes.md  2026-07-02-capsule-tightness-review-fixes.md  2026-07-03-capsule-endpoint-semantics-fix.md  2026-07-03-fr3-link0-capsule-detail.md  2026-07-03-open-source-productization.md  2026-07-03-productization-review-fixes.md  2026-07-03-release-readiness-fixes.md
include/: CapsuleCrossSection.h  CapsuleFitter.h  CapsuleURDFGenerator.h  ConvexHullCollisionURDFGenerator.h  SphereTreeURDFGenerator.h  URDFGenerator.h
interface/: CMakeLists.txt  urdf_approx_geom.cpp
python/: conftest.py  pyproject.toml  urdf_approx_geom_cli.py
python/tests/: test_api_contract.py  test_capsule.py  test_capsule_union_metrics.py  test_cli.py  test_cli_cwd_independent.py  test_extension_import.py  test_generate_all_presets.py  test_mesh_source.py  test_presets.py  test_public_python_smoke.py  test_robot_viewer_bundle.py  test_sphere_default_schema.py  test_sphere_single_preset.py  test_validation_cli.py  test_visualize_cli.py
python/urdf_approx_geom/: __init__.py  _extension.py  _paths.py  api.py  cli.py  presets.py  robot_viewer.py  validation.py  visualization.py
resources/fr3/urdf/: fr3.urdf  fr3.xacro  fr3_capsuleized.json  fr3_capsuleized.urdf  fr3_capsules.xml  fr3_convex.urdf  fr3_spherized.json  fr3_spherized.urdf  fr3_spherized_1.urdf  franka_hand.xacro  robot_assmble.xacro
scripts/: check_capsule_coverage.py  check_capsule_tightness.py  compare_capsule_presets.py  make_mjcf.py  report_fr3_volume_table.py  urdf_approx_validate.py  urdf_approx_visualize.py  viz_capsules.py
src/: CapsuleCrossSection.cpp  CapsuleFitter.cpp  CapsuleURDFGenerator.cpp  ConvexHullCollisionURDFGenerator.cpp  SphereTreeURDFGenerator.cpp  URDFGenerator.cpp
test/: CMakeLists.txt  test_capsule.cpp  test_manifoldplus.cpp  test_simplify.cpp  test_spheretree.cpp  test_urdf_genderator.cpp
(+36 files in other folders)
