[project]
name = "urdf-approx-geom"
version = "1.5.0"
description = "URDF collision-geometry approximator for convex mesh, sphere, and capsule outputs"
requires-python = ">=3.10"
authors = [{ name = "YX.E.Z", email = "yixuanzhou@sjtu.edu.cn" }]

[project.scripts]
urdf-approx-geom = "urdf_approx_geom.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.urdf-approx-geom]
extension_build_path = "build/python"
