[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "urdf-approx-geom"
version = "1.5.0"
description = "URDF collision-geometry approximator for convex mesh, sphere, and capsule outputs"
requires-python = ">=3.10"
authors = [{ name = "YX.E.Z", email = "yixuanzhou@sjtu.edu.cn" }]

[project.scripts]
urdf-approx-geom = "urdf_approx_geom.cli:main"

# The compiled pybind11 extension (_urdf_approx_geom) is built by CMake into
# build/python in a source tree, and loaded at runtime via
# urdf_approx_geom/_extension.py. For an installed image / wheel the .so and
# the config/ tree are staged inside the package dir, so they ship with the
# install and _extension.py / presets.py resolve them via package-relative
# lookup (see urdf_approx_geom/_paths.py).
[tool.setuptools]
packages = ["urdf_approx_geom"]

[tool.setuptools.package-data]
urdf_approx_geom = ["config/**/*.yml", "*.so"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.urdf-approx-geom]
extension_build_path = "build/python"
